extends Control

func _ready():
	yield(get_tree().create_timer(0.5), "timeout")
	$RichTextLabel/AnimationPlayer.play("line1")
	$Type.play()
	yield($RichTextLabel/AnimationPlayer, "animation_finished")
	$Type.stop()
	yield(get_tree().create_timer(0.5), "timeout")
	$RichTextLabel7/AnimationPlayer2.play("line2")
	$Type.play()
	yield($RichTextLabel7/AnimationPlayer2, "animation_finished")
	$Type.stop()
	yield(get_tree().create_timer(0.5), "timeout")
	$RichTextLabel6/AnimationPlayer2.play("line3")
	$Type.play()
	yield($RichTextLabel6/AnimationPlayer2, "animation_finished")
	$Type.stop()
	yield(get_tree().create_timer(0.5), "timeout")
	$RichTextLabel3/AnimationPlayer2.play("line4")
	$Type.play()
	yield($RichTextLabel3/AnimationPlayer2, "animation_finished")
	$Type.stop()
	yield(get_tree().create_timer(0.5), "timeout")
	$RichTextLabel5/AnimationPlayer2.play("line5")
	$Type.play()
	yield($RichTextLabel5/AnimationPlayer2, "animation_finished")
	$Type.stop()
	yield(get_tree().create_timer(0.5), "timeout")
	$RichTextLabel4/AnimationPlayer2.play("line6")
	$Type.play()
	yield($RichTextLabel4/AnimationPlayer2, "animation_finished")
	$Type.stop()
	yield(get_tree().create_timer(2), "timeout")
	Transition.change_scene("res://Act1/cutscenes/scene0/executioner.tscn")
